<resources>
    <!-- App Name -->
    <string name="app_name">Handicapp</string>

    <!-- Auto-generated Strings -->
    <string name="hello_world">Hello world!</string>
    <!-- TODO Change -->
    <string name="hello_blank_fragment_r">Hello blank fragment RESTAURANTS</string>
    <string name="hello_blank_fragment_h">Hello blank fragment HOTELS</string>
    <string name="hello_blank_fragment_s">Hello blank fragment SUGGESTIONS</string>

    <!-- Action strings -->
    <string name="action_home">Home</string>
    <string name="action_lists">Listas</string>
    <string name="action_map">Mapa</string>

    <!-- Activity Titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">Mapa</string>
    <string name="title_activity_lists">Listas</string>
    <string name="title_activity_details">Restaurantes - Detalles</string>
    <string name="title_activity_hotel">Alojamientos - Detalles</string>

    <!-- Tabs Titles -->
    <string name="tab_restaurants">Restaurantes</string>
    <string name="tab_hotels">Alojamientos</string>
    <string name="tab_suggestions">sugerencias</string>
    <string name="title_activity_add_point">Añadir Lugar</string>

    <!-- Buttons -->
    <string name="button_text_add">Añadir</string>
    <string name="button_text_accept">Aceptar</string>
    <string name="button_text_yes">Si</string>
    <string name="button_text_no">No</string>

    <!-- Labels and texts-->
    <string name="lbl_name">Nombre: </string>
    <string name="hint_name">Nombre del lugar</string>
    <string name="lbl_description">Description: </string>
    <string name="hint_description">Descripción del lugar</string>
    <string name="lbl_type">Tipo: </string>
    <string name="lbl_exit">Salir de la aplicación.</string>
    <string name="txt_sure_exit">¿Estas seguro que quieres salir de la aplicación?</string>
    <string name="lbl_address">Dirección: </string>
    <string name="lbl_phone">Teléfono: </string>
    <string name="lbl_email">Email: </string>
    <string name="lbl_comment">Descripción: </string>
    <string name="lbl_capacity">Capacidad: </string>
    <string name="lbl_fork">Tenedores: </string>
    <string name="lbl_beds">Camas: </string>
    <string name="lbl_rooms">Habitaciones: </string>
    <string name="txt_zgzes">http://www.zaragoza.es</string>
    <string name="txt_select_type">Elige un tipo</string>
    <string name="txt_select_point">Elige un punto del mapa</string>
    <string name="txt_select_title">Elige un titulo para el punto</string>
    <string name="txt_select_description">Elige una descripción para el punto</string>

    <!-- Spinner -->
    <string-array name="suggestion_types">
        <item>Sugerencia</item>
        <item>Restaurante</item>
        <item>Alojamiento</item>
    </string-array>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="action_settings">Settings</string>

</resources>
